# cybershield-ai-platform

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt
Demo/: README.md  demo.py  demo_requests.http  sample_outputs.md
cybersecurity_terms/: ai_ml_dl_glossary.md  cybersecurity_glossary.md
data/data/: README.md  generated_dataset.csv  seed_urls.csv
models/models/: metrics.json  model.joblib
web/: app.js  common.js  index.html  styles.css
web/tabs/: assets.js  cve_intel.js  redteam.js  threat_intel.js  url_shield.js
