[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybershield-platform"
version = "2.0.0"
description = "CyberShield AI Platform — unified AI-powered security intelligence"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.13",
    "rich>=13.9",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.1",
    "joblib>=1.3",
    "sentence-transformers>=3.3",
    "faiss-cpu>=1.9",
    "tqdm>=4.67",
    "openai>=1.30",
]

[project.scripts]
platform = "platform_core.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
